update with 62 changes

--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,11 +68,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1807c9a">사용법</a>
+<li><a href="#org831b011">사용법</a>
 <ul>
-<li><a href="#org49c3feb">무제한 잠자기 방지</a></li>
-<li><a href="#org566d52d">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org99a3939">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org7b66cb7">무제한 잠자기 방지</a></li>
+<li><a href="#org122d802">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org835c4e6">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -91,13 +83,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org1807c9a" class="outline-2">
-<h2 id="org1807c9a">사용법</h2>
-<div class="outline-text-2" id="text-org1807c9a">
+<div id="outline-container-org831b011" class="outline-2">
+<h2 id="org831b011">사용법</h2>
+<div class="outline-text-2" id="text-org831b011">
 </div>
-<div id="outline-container-org49c3feb" class="outline-3">
-<h3 id="org49c3feb">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org49c3feb">
+<div id="outline-container-org7b66cb7" class="outline-3">
+<h3 id="org7b66cb7">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org7b66cb7">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -108,9 +100,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org566d52d" class="outline-3">
-<h3 id="org566d52d">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org566d52d">
+<div id="outline-container-org122d802" class="outline-3">
+<h3 id="org122d802">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org122d802">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -121,9 +113,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org99a3939" class="outline-3">
-<h3 id="org99a3939">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org99a3939">
+<div id="outline-container-org835c4e6" class="outline-3">
+<h3 id="org835c4e6">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org835c4e6">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
@@ -166,5 +158,14 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
