--- a/note/definition.html
+++ b/note/definition.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,10 +68,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4c71ff7">대충 사용하는 의미</a></li>
-<li><a href="#org81bdad8">구세대 언어의 예</a></li>
-<li><a href="#org0800775">현대적인 언어의 예</a></li>
-<li><a href="#orgca6f9b9">결론</a></li>
+<li><a href="#org10d0f78">대충 사용하는 의미</a></li>
+<li><a href="#org6023075">구세대 언어의 예</a></li>
+<li><a href="#org3f4d3eb">현대적인 언어의 예</a></li>
+<li><a href="#org7220681">결론</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +80,9 @@ gtag('config', 'UA-44534026-1');
 IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(definition) 개념을 다룬다.
 </p>
 
-<div id="outline-container-org4c71ff7" class="outline-2">
-<h2 id="org4c71ff7">대충 사용하는 의미</h2>
-<div class="outline-text-2" id="text-org4c71ff7">
+<div id="outline-container-org10d0f78" class="outline-2">
+<h2 id="org10d0f78">대충 사용하는 의미</h2>
+<div class="outline-text-2" id="text-org10d0f78">
 <blockquote>
 <p>
 정의하다 = 코딩하다
@@ -106,9 +98,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org81bdad8" class="outline-2">
-<h2 id="org81bdad8">구세대 언어의 예</h2>
-<div class="outline-text-2" id="text-org81bdad8">
+<div id="outline-container-org6023075" class="outline-2">
+<h2 id="org6023075">구세대 언어의 예</h2>
+<div class="outline-text-2" id="text-org6023075">
 <p>
 예를 들어 C 언어의 경우 정의는 아래와 같은 식이다.
 </p>
@@ -145,9 +137,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org0800775" class="outline-2">
-<h2 id="org0800775">현대적인 언어의 예</h2>
-<div class="outline-text-2" id="text-org0800775">
+<div id="outline-container-org3f4d3eb" class="outline-2">
+<h2 id="org3f4d3eb">현대적인 언어의 예</h2>
+<div class="outline-text-2" id="text-org3f4d3eb">
 <p>
 예를 들어 <a href="swift.html">Swift</a>로 구조체를 정의하는 방법을 보자.
 </p>
@@ -178,9 +170,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-orgca6f9b9" class="outline-2">
-<h2 id="orgca6f9b9">결론</h2>
-<div class="outline-text-2" id="text-orgca6f9b9">
+<div id="outline-container-org7220681" class="outline-2">
+<h2 id="org7220681">결론</h2>
+<div class="outline-text-2" id="text-org7220681">
 <blockquote>
 <p>
 정의와 구현은 일단은 다르다.
@@ -240,5 +232,14 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
