--- a/note/flake8.html
+++ b/note/flake8.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,11 +68,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org946d845">설치</a></li>
-<li><a href="#org8d38307">사용법</a></li>
-<li><a href="#orgbf83043">설정 파일</a></li>
-<li><a href="#orgefe4c58">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#org9249d6b">외부 링크</a></li>
+<li><a href="#org69d9e10">설치</a></li>
+<li><a href="#org543dd99">사용법</a></li>
+<li><a href="#org84832da">설정 파일</a></li>
+<li><a href="#org3fc9947">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#org9cce6d3">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +84,9 @@ gtag('config', 'UA-44534026-1');
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-org946d845" class="outline-2">
-<h2 id="org946d845">설치</h2>
-<div class="outline-text-2" id="text-org946d845">
+<div id="outline-container-org69d9e10" class="outline-2">
+<h2 id="org69d9e10">설치</h2>
+<div class="outline-text-2" id="text-org69d9e10">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -104,9 +96,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-org8d38307" class="outline-2">
-<h2 id="org8d38307">사용법</h2>
-<div class="outline-text-2" id="text-org8d38307">
+<div id="outline-container-org543dd99" class="outline-2">
+<h2 id="org543dd99">사용법</h2>
+<div class="outline-text-2" id="text-org543dd99">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -126,9 +118,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgbf83043" class="outline-2">
-<h2 id="orgbf83043">설정 파일</h2>
-<div class="outline-text-2" id="text-orgbf83043">
+<div id="outline-container-org84832da" class="outline-2">
+<h2 id="org84832da">설정 파일</h2>
+<div class="outline-text-2" id="text-org84832da">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -160,9 +152,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-orgefe4c58" class="outline-2">
-<h2 id="orgefe4c58">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-orgefe4c58">
+<div id="outline-container-org3fc9947" class="outline-2">
+<h2 id="org3fc9947">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-org3fc9947">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -195,9 +187,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-org9249d6b" class="outline-2">
-<h2 id="org9249d6b">외부 링크</h2>
-<div class="outline-text-2" id="text-org9249d6b">
+<div id="outline-container-org9cce6d3" class="outline-2">
+<h2 id="org9cce6d3">외부 링크</h2>
+<div class="outline-text-2" id="text-org9cce6d3">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
@@ -238,5 +230,14 @@ exclude = file_to_exclude.py
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
