--- a/note/flutter.html
+++ b/note/flutter.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,10 +68,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org011b25d">문제 해결</a>
+<li><a href="#orgdf599b6">문제 해결</a>
 <ul>
-<li><a href="#org14080e1">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org936dd3e">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#orgf546127">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org049df09">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -95,13 +87,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org011b25d" class="outline-2">
-<h2 id="org011b25d">문제 해결</h2>
-<div class="outline-text-2" id="text-org011b25d">
+<div id="outline-container-orgdf599b6" class="outline-2">
+<h2 id="orgdf599b6">문제 해결</h2>
+<div class="outline-text-2" id="text-orgdf599b6">
 </div>
-<div id="outline-container-org14080e1" class="outline-3">
-<h3 id="org14080e1">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org14080e1">
+<div id="outline-container-orgf546127" class="outline-3">
+<h3 id="orgf546127">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-orgf546127">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -134,9 +126,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-org936dd3e" class="outline-3">
-<h3 id="org936dd3e">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org936dd3e">
+<div id="outline-container-org049df09" class="outline-3">
+<h3 id="org049df09">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-org049df09">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -203,5 +195,14 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
