--- a/note/macos.html
+++ b/note/macos.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org15cc443">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org307e175">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgae6722b">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org2f4bcf8">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgd542694">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgccc20e2">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -103,17 +95,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org15cc443" class="outline-2">
-<h2 id="org15cc443">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org15cc443">
+<div id="outline-container-org2f4bcf8" class="outline-2">
+<h2 id="org2f4bcf8">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org2f4bcf8">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org307e175" class="outline-2">
-<h2 id="org307e175">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org307e175">
+<div id="outline-container-orgd542694" class="outline-2">
+<h2 id="orgd542694">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgd542694">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -133,9 +125,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgae6722b" class="outline-2">
-<h2 id="orgae6722b">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orgae6722b">
+<div id="outline-container-orgccc20e2" class="outline-2">
+<h2 id="orgccc20e2">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgccc20e2">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -327,5 +319,14 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
