--- a/note/object.html
+++ b/note/object.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,16 +68,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org201e9fc">사전적 의미</a></li>
-<li><a href="#org0d58b2b">컴퓨터 프로그래밍 개념 1</a></li>
-<li><a href="#orgd9e079d">컴퓨터 프로그래밍 개념 2</a></li>
+<li><a href="#org01dbba3">사전적 의미</a></li>
+<li><a href="#org9844b64">컴퓨터 프로그래밍 개념 1</a></li>
+<li><a href="#org137f279">컴퓨터 프로그래밍 개념 2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org201e9fc" class="outline-2">
-<h2 id="org201e9fc">사전적 의미</h2>
-<div class="outline-text-2" id="text-org201e9fc">
+<div id="outline-container-org01dbba3" class="outline-2">
+<h2 id="org01dbba3">사전적 의미</h2>
+<div class="outline-text-2" id="text-org01dbba3">
 <blockquote>
 <p>
 물건, 물체
@@ -96,9 +88,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org0d58b2b" class="outline-2">
-<h2 id="org0d58b2b">컴퓨터 프로그래밍 개념 1</h2>
-<div class="outline-text-2" id="text-org0d58b2b">
+<div id="outline-container-org9844b64" class="outline-2">
+<h2 id="org9844b64">컴퓨터 프로그래밍 개념 1</h2>
+<div class="outline-text-2" id="text-org9844b64">
 <p>
 오브젝트(Object, 객체)는 OOP(Object Orient Programming, 객체 지향 프로그래밍)에서
 클래스(Class)를 실체화 시킨 <a href="instance.html">인스턴스</a>를 특별히 부르는 이름이다.
@@ -109,9 +101,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgd9e079d" class="outline-2">
-<h2 id="orgd9e079d">컴퓨터 프로그래밍 개념 2</h2>
-<div class="outline-text-2" id="text-orgd9e079d">
+<div id="outline-container-org137f279" class="outline-2">
+<h2 id="org137f279">컴퓨터 프로그래밍 개념 2</h2>
+<div class="outline-text-2" id="text-org137f279">
 <p>
 C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브젝트 파일이라고 부른다.
 실제로 확장자가 <code>.o</code> 이다.
@@ -161,5 +153,14 @@ C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
