--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcf82320">외부 링크</a></li>
+<li><a href="#orgc17b621">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -93,9 +85,9 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 상세한 내용은 <a target="_blank" href="https://seorenn.tistory.com/63">🌏Org Publish로 익스포트 자동화하기</a> 글을 참고하자.
 </p>
 
-<div id="outline-container-orgcf82320" class="outline-2">
-<h2 id="orgcf82320">외부 링크</h2>
-<div class="outline-text-2" id="text-orgcf82320">
+<div id="outline-container-orgc17b621" class="outline-2">
+<h2 id="orgc17b621">외부 링크</h2>
+<div class="outline-text-2" id="text-orgc17b621">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏org-publish 공식 매뉴얼</a></li>
 </ul>
@@ -133,5 +125,14 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
