--- a/note/dd.html
+++ b/note/dd.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4668aa6">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#org63c68ce">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#org7b479fe">팁</a></li>
+<li><a href="#org73ead3d">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#org71eb94d">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#org7d815a6">팁</a></li>
 </ul>
 </div>
 </div>
@@ -95,9 +87,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-org4668aa6" class="outline-2">
-<h2 id="org4668aa6">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-org4668aa6">
+<div id="outline-container-org73ead3d" class="outline-2">
+<h2 id="org73ead3d">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-org73ead3d">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -147,9 +139,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org63c68ce" class="outline-2">
-<h2 id="org63c68ce">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-org63c68ce">
+<div id="outline-container-org71eb94d" class="outline-2">
+<h2 id="org71eb94d">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-org71eb94d">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -171,9 +163,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org7b479fe" class="outline-2">
-<h2 id="org7b479fe">팁</h2>
-<div class="outline-text-2" id="text-org7b479fe">
+<div id="outline-container-org7d815a6" class="outline-2">
+<h2 id="org7d815a6">팁</h2>
+<div class="outline-text-2" id="text-org7d815a6">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
@@ -223,5 +215,14 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
