--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,12 +68,12 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgeafa76b">단축키</a>
+<li><a href="#orga9bd02d">단축키</a>
 <ul>
-<li><a href="#orgd7e0daf">프로젝트(Project)</a></li>
-<li><a href="#org1f29d41">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org26af9e7">타임라인(Timeline)</a></li>
-<li><a href="#orgd34c5e4">플레이(Play or Preview)</a></li>
+<li><a href="#org0cb8e05">프로젝트(Project)</a></li>
+<li><a href="#orgb95f4e8">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#orge100aa1">타임라인(Timeline)</a></li>
+<li><a href="#org91be2c7">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -93,13 +85,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-orgeafa76b" class="outline-2">
-<h2 id="orgeafa76b">단축키</h2>
-<div class="outline-text-2" id="text-orgeafa76b">
+<div id="outline-container-orga9bd02d" class="outline-2">
+<h2 id="orga9bd02d">단축키</h2>
+<div class="outline-text-2" id="text-orga9bd02d">
 </div>
-<div id="outline-container-orgd7e0daf" class="outline-3">
-<h3 id="orgd7e0daf">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-orgd7e0daf">
+<div id="outline-container-org0cb8e05" class="outline-3">
+<h3 id="org0cb8e05">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org0cb8e05">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -108,9 +100,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org1f29d41" class="outline-3">
-<h3 id="org1f29d41">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org1f29d41">
+<div id="outline-container-orgb95f4e8" class="outline-3">
+<h3 id="orgb95f4e8">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-orgb95f4e8">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -125,9 +117,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org26af9e7" class="outline-3">
-<h3 id="org26af9e7">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org26af9e7">
+<div id="outline-container-orge100aa1" class="outline-3">
+<h3 id="orge100aa1">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-orge100aa1">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -152,9 +144,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgd34c5e4" class="outline-3">
-<h3 id="orgd34c5e4">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-orgd34c5e4">
+<div id="outline-container-org91be2c7" class="outline-3">
+<h3 id="org91be2c7">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-org91be2c7">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -206,5 +198,14 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
