--- a/note/grep.html
+++ b/note/grep.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,16 +68,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgddbe169">기본 사용법</a></li>
-<li><a href="#org315798b">대소문자 무시</a></li>
-<li><a href="#org7534c26">바이너리(Binary) 파일 무시하기</a></li>
-<li><a href="#orgb4316e9">재귀(Recursive) 검색</a></li>
-<li><a href="#org96ed076">검색된 파일 이름만 보기</a></li>
-<li><a href="#orga6a5827">단어만 검색하기</a></li>
-<li><a href="#org0bd64d7">줄 번호(Line Number) 보기</a></li>
-<li><a href="#org14691d0">발견 개수 보기</a></li>
-<li><a href="#orgc487d72">검색되지 않는 것만 보기</a></li>
-<li><a href="#orgda08be9">정규표현식</a></li>
+<li><a href="#org64ee0f8">기본 사용법</a></li>
+<li><a href="#org833a47b">대소문자 무시</a></li>
+<li><a href="#org666c432">바이너리(Binary) 파일 무시하기</a></li>
+<li><a href="#orgd245702">재귀(Recursive) 검색</a></li>
+<li><a href="#org4e480af">검색된 파일 이름만 보기</a></li>
+<li><a href="#orgac9fb22">단어만 검색하기</a></li>
+<li><a href="#orge3eaefb">줄 번호(Line Number) 보기</a></li>
+<li><a href="#org318fdd4">발견 개수 보기</a></li>
+<li><a href="#org09d8b1b">검색되지 않는 것만 보기</a></li>
+<li><a href="#org898b8ad">정규표현식</a></li>
 </ul>
 </div>
 </div>
@@ -93,9 +85,9 @@ gtag('config', 'UA-44534026-1');
 Grep은 파일이나 텍스트에서 특정 텍스트를 검색하는 데 사용되는 *NIX <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgddbe169" class="outline-2">
-<h2 id="orgddbe169">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgddbe169">
+<div id="outline-container-org64ee0f8" class="outline-2">
+<h2 id="org64ee0f8">기본 사용법</h2>
+<div class="outline-text-2" id="text-org64ee0f8">
 <p>
 기본적으로는 텍스트 파일에서 문자열을 검색하는 것을 생각할 수 있다.
 </p>
@@ -122,9 +114,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org315798b" class="outline-2">
-<h2 id="org315798b">대소문자 무시</h2>
-<div class="outline-text-2" id="text-org315798b">
+<div id="outline-container-org833a47b" class="outline-2">
+<h2 id="org833a47b">대소문자 무시</h2>
+<div class="outline-text-2" id="text-org833a47b">
 <p>
 <code>-i</code> 옵션을 사용하면 대소문자를 가리지 않고 검색한다.
 </p>
@@ -134,9 +126,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org7534c26" class="outline-2">
-<h2 id="org7534c26">바이너리(Binary) 파일 무시하기</h2>
-<div class="outline-text-2" id="text-org7534c26">
+<div id="outline-container-org666c432" class="outline-2">
+<h2 id="org666c432">바이너리(Binary) 파일 무시하기</h2>
+<div class="outline-text-2" id="text-org666c432">
 <p>
 가끔 이진 파일에서 검색하느라 느려지거나 이상한 것을 검색하기도 하는데, 이를 때는 <code>-I</code> 옵션을 사용할 수 있다.
 </p>
@@ -146,9 +138,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-orgb4316e9" class="outline-2">
-<h2 id="orgb4316e9">재귀(Recursive) 검색</h2>
-<div class="outline-text-2" id="text-orgb4316e9">
+<div id="outline-container-orgd245702" class="outline-2">
+<h2 id="orgd245702">재귀(Recursive) 검색</h2>
+<div class="outline-text-2" id="text-orgd245702">
 <p>
 재귀 검색이란 하위 디렉터리를 모두 다 뒤져본다는 의미다.
 </p>
@@ -174,9 +166,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org96ed076" class="outline-2">
-<h2 id="org96ed076">검색된 파일 이름만 보기</h2>
-<div class="outline-text-2" id="text-org96ed076">
+<div id="outline-container-org4e480af" class="outline-2">
+<h2 id="org4e480af">검색된 파일 이름만 보기</h2>
+<div class="outline-text-2" id="text-org4e480af">
 <p>
 <code>-l</code> 옵션은 발견된 패턴을 화면에 표시하지 않게 한다.
 </p>
@@ -191,9 +183,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orga6a5827" class="outline-2">
-<h2 id="orga6a5827">단어만 검색하기</h2>
-<div class="outline-text-2" id="text-orga6a5827">
+<div id="outline-container-orgac9fb22" class="outline-2">
+<h2 id="orgac9fb22">단어만 검색하기</h2>
+<div class="outline-text-2" id="text-orgac9fb22">
 <p>
 단어 단위 검색을 하기 위해서 <code>-w</code> 옵션을 사용할 수 있다.
 </p>
@@ -206,9 +198,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org0bd64d7" class="outline-2">
-<h2 id="org0bd64d7">줄 번호(Line Number) 보기</h2>
-<div class="outline-text-2" id="text-org0bd64d7">
+<div id="outline-container-orge3eaefb" class="outline-2">
+<h2 id="orge3eaefb">줄 번호(Line Number) 보기</h2>
+<div class="outline-text-2" id="text-orge3eaefb">
 <p>
 <code>-n</code> 옵션을 이용해 줄 번호를 표시할 수 있다.
 </p>
@@ -221,9 +213,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org14691d0" class="outline-2">
-<h2 id="org14691d0">발견 개수 보기</h2>
-<div class="outline-text-2" id="text-org14691d0">
+<div id="outline-container-org318fdd4" class="outline-2">
+<h2 id="org318fdd4">발견 개수 보기</h2>
+<div class="outline-text-2" id="text-org318fdd4">
 <p>
 <code>-c</code> 옵션을 주면 발견된 개수(count)를 구할 수 있다.
 </p>
@@ -236,9 +228,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgc487d72" class="outline-2">
-<h2 id="orgc487d72">검색되지 않는 것만 보기</h2>
-<div class="outline-text-2" id="text-orgc487d72">
+<div id="outline-container-org09d8b1b" class="outline-2">
+<h2 id="org09d8b1b">검색되지 않는 것만 보기</h2>
+<div class="outline-text-2" id="text-org09d8b1b">
 <p>
 <code>-v</code> 옵션을 주면 검색되지 않는 라인을 화면에 표시한다.
 </p>
@@ -251,9 +243,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgda08be9" class="outline-2">
-<h2 id="orgda08be9">정규표현식</h2>
-<div class="outline-text-2" id="text-orgda08be9">
+<div id="outline-container-org898b8ad" class="outline-2">
+<h2 id="org898b8ad">정규표현식</h2>
+<div class="outline-text-2" id="text-org898b8ad">
 <p>
 원래 정규표현식이 지원되지 때문에 그냥 써도 된다.
 </p>
@@ -305,5 +297,14 @@ this is sample
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
