--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,22 +68,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org93a4424">기본 사용법</a>
+<li><a href="#org318cae6">기본 사용법</a>
 <ul>
-<li><a href="#orgb000dd2">패키지 검색</a></li>
-<li><a href="#org67f51e2">패키지 정보</a></li>
-<li><a href="#orgad46058">패키지 설치</a></li>
-<li><a href="#orgf877d7b">만료된 버전 확인</a></li>
-<li><a href="#orgc6c2656">패키지 업그레이드</a></li>
-<li><a href="#orgc17ea7e">구 버전 삭제하기</a></li>
-<li><a href="#orgcc46da9">패키지 삭제(uninstall)</a></li>
-<li><a href="#orgcebe911">의사 양반(?)</a></li>
+<li><a href="#orgb489706">패키지 검색</a></li>
+<li><a href="#org51b0259">패키지 정보</a></li>
+<li><a href="#org7aee20f">패키지 설치</a></li>
+<li><a href="#org85487d2">만료된 버전 확인</a></li>
+<li><a href="#org25b064f">패키지 업그레이드</a></li>
+<li><a href="#org19a9f58">구 버전 삭제하기</a></li>
+<li><a href="#orgf31059f">패키지 삭제(uninstall)</a></li>
+<li><a href="#org95e0417">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#orgf3e716c">구 버전 패키지 사용하기</a></li>
-<li><a href="#org96c9906">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgf38bb20">Cask</a></li>
-<li><a href="#orgab1c5e1">외부 링크</a></li>
+<li><a href="#org3048f3f">구 버전 패키지 사용하기</a></li>
+<li><a href="#orgc0406e7">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#orgfe67f29">Cask</a></li>
+<li><a href="#orgdaa363a">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -102,31 +94,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-org93a4424" class="outline-2">
-<h2 id="org93a4424">기본 사용법</h2>
-<div class="outline-text-2" id="text-org93a4424">
+<div id="outline-container-org318cae6" class="outline-2">
+<h2 id="org318cae6">기본 사용법</h2>
+<div class="outline-text-2" id="text-org318cae6">
 </div>
-<div id="outline-container-orgb000dd2" class="outline-3">
-<h3 id="orgb000dd2">패키지 검색</h3>
-<div class="outline-text-3" id="text-orgb000dd2">
+<div id="outline-container-orgb489706" class="outline-3">
+<h3 id="orgb489706">패키지 검색</h3>
+<div class="outline-text-3" id="text-orgb489706">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org67f51e2" class="outline-3">
-<h3 id="org67f51e2">패키지 정보</h3>
-<div class="outline-text-3" id="text-org67f51e2">
+<div id="outline-container-org51b0259" class="outline-3">
+<h3 id="org51b0259">패키지 정보</h3>
+<div class="outline-text-3" id="text-org51b0259">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgad46058" class="outline-3">
-<h3 id="orgad46058">패키지 설치</h3>
-<div class="outline-text-3" id="text-orgad46058">
+<div id="outline-container-org7aee20f" class="outline-3">
+<h3 id="org7aee20f">패키지 설치</h3>
+<div class="outline-text-3" id="text-org7aee20f">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -137,9 +129,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf877d7b" class="outline-3">
-<h3 id="orgf877d7b">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-orgf877d7b">
+<div id="outline-container-org85487d2" class="outline-3">
+<h3 id="org85487d2">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-org85487d2">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -151,9 +143,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgc6c2656" class="outline-3">
-<h3 id="orgc6c2656">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-orgc6c2656">
+<div id="outline-container-org25b064f" class="outline-3">
+<h3 id="org25b064f">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-org25b064f">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -167,9 +159,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgc17ea7e" class="outline-3">
-<h3 id="orgc17ea7e">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-orgc17ea7e">
+<div id="outline-container-org19a9f58" class="outline-3">
+<h3 id="org19a9f58">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-org19a9f58">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -183,18 +175,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgcc46da9" class="outline-3">
-<h3 id="orgcc46da9">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-orgcc46da9">
+<div id="outline-container-orgf31059f" class="outline-3">
+<h3 id="orgf31059f">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-orgf31059f">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgcebe911" class="outline-3">
-<h3 id="orgcebe911">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-orgcebe911">
+<div id="outline-container-org95e0417" class="outline-3">
+<h3 id="org95e0417">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-org95e0417">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -205,9 +197,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgf3e716c" class="outline-2">
-<h2 id="orgf3e716c">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-orgf3e716c">
+<div id="outline-container-org3048f3f" class="outline-2">
+<h2 id="org3048f3f">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org3048f3f">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -222,9 +214,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org96c9906" class="outline-2">
-<h2 id="org96c9906">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org96c9906">
+<div id="outline-container-orgc0406e7" class="outline-2">
+<h2 id="orgc0406e7">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-orgc0406e7">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -327,9 +319,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgf38bb20" class="outline-2">
-<h2 id="orgf38bb20">Cask</h2>
-<div class="outline-text-2" id="text-orgf38bb20">
+<div id="outline-container-orgfe67f29" class="outline-2">
+<h2 id="orgfe67f29">Cask</h2>
+<div class="outline-text-2" id="text-orgfe67f29">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -363,9 +355,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-orgab1c5e1" class="outline-2">
-<h2 id="orgab1c5e1">외부 링크</h2>
-<div class="outline-text-2" id="text-orgab1c5e1">
+<div id="outline-container-orgdaa363a" class="outline-2">
+<h2 id="orgdaa363a">외부 링크</h2>
+<div class="outline-text-2" id="text-orgdaa363a">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
@@ -441,5 +433,14 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
