--- a/note/instance.html
+++ b/note/instance.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,32 +68,32 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgdf11576">프로세스 개념</a></li>
-<li><a href="#org8bc1951">특정 서비스의 용어</a></li>
-<li><a href="#org560f065">컴퓨터 프로그래밍 개념</a></li>
+<li><a href="#org2425cdd">프로세스 개념</a></li>
+<li><a href="#orgfdcb540">특정 서비스의 용어</a></li>
+<li><a href="#org77dbf0f">컴퓨터 프로그래밍 개념</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgdf11576" class="outline-2">
-<h2 id="orgdf11576">프로세스 개념</h2>
-<div class="outline-text-2" id="text-orgdf11576">
+<div id="outline-container-org2425cdd" class="outline-2">
+<h2 id="org2425cdd">프로세스 개념</h2>
+<div class="outline-text-2" id="text-org2425cdd">
 <p>
 실행 중인 임의의 프로세스를 인스턴스라고 부르기도 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org8bc1951" class="outline-2">
-<h2 id="org8bc1951">특정 서비스의 용어</h2>
-<div class="outline-text-2" id="text-org8bc1951">
+<div id="outline-container-orgfdcb540" class="outline-2">
+<h2 id="orgfdcb540">특정 서비스의 용어</h2>
+<div class="outline-text-2" id="text-orgfdcb540">
 <p>
 예를 들어 AWS의 EC2 서비스의 경우 각각의 가상 서버를 EC2 인스턴스라고 부른다.
 </p>
 </div>
 </div>
-<div id="outline-container-org560f065" class="outline-2">
-<h2 id="org560f065">컴퓨터 프로그래밍 개념</h2>
-<div class="outline-text-2" id="text-org560f065">
+<div id="outline-container-org77dbf0f" class="outline-2">
+<h2 id="org77dbf0f">컴퓨터 프로그래밍 개념</h2>
+<div class="outline-text-2" id="text-org77dbf0f">
 <p>
 <a href="definition.html">정의</a>를 실체화(?) 시킨 것을 인스턴스라고 부른다.
 </p>
@@ -206,5 +198,14 @@ gtag('config', 'UA-44534026-1');
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
