--- a/note/javascript.html
+++ b/note/javascript.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,22 +68,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf7c346d">노트</a>
+<li><a href="#orge607a0d">노트</a>
 <ul>
-<li><a href="#org082e4ee">모듈(Module)</a></li>
-<li><a href="#org76376c3">스프레드(Spreads) 연산자</a></li>
-<li><a href="#orgc43f628">튜플 비슷한 문법</a></li>
+<li><a href="#org798885a">모듈(Module)</a></li>
+<li><a href="#org589726d">스프레드(Spreads) 연산자</a></li>
+<li><a href="#org7181936">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#org1cb539a">실전(?) 메모</a>
+<li><a href="#org8bc7010">실전(?) 메모</a>
 <ul>
-<li><a href="#orgdc23d88">요소 얻기</a></li>
-<li><a href="#org453dc15">특정 블록에 HTML 넣기</a></li>
-<li><a href="#org1f70b2c">콘텐츠 높이 구하기</a></li>
-<li><a href="#orga23b55a">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#org14cb508">요소 얻기</a></li>
+<li><a href="#orgc235a97">특정 블록에 HTML 넣기</a></li>
+<li><a href="#orga67e25b">콘텐츠 높이 구하기</a></li>
+<li><a href="#org7871f2f">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
-<li><a href="#orgbe23ed3">외부 링크</a></li>
+<li><a href="#orgea8fb91">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -109,13 +101,13 @@ gtag('config', 'UA-44534026-1');
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-orgf7c346d" class="outline-2">
-<h2 id="orgf7c346d">노트</h2>
-<div class="outline-text-2" id="text-orgf7c346d">
+<div id="outline-container-orge607a0d" class="outline-2">
+<h2 id="orge607a0d">노트</h2>
+<div class="outline-text-2" id="text-orge607a0d">
 </div>
-<div id="outline-container-org082e4ee" class="outline-3">
-<h3 id="org082e4ee">모듈(Module)</h3>
-<div class="outline-text-3" id="text-org082e4ee">
+<div id="outline-container-org798885a" class="outline-3">
+<h3 id="org798885a">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org798885a">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -167,9 +159,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org76376c3" class="outline-3">
-<h3 id="org76376c3">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org76376c3">
+<div id="outline-container-org589726d" class="outline-3">
+<h3 id="org589726d">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org589726d">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -232,9 +224,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc43f628" class="outline-3">
-<h3 id="orgc43f628">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-orgc43f628">
+<div id="outline-container-org7181936" class="outline-3">
+<h3 id="org7181936">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-org7181936">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -246,13 +238,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-org1cb539a" class="outline-2">
-<h2 id="org1cb539a">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-org1cb539a">
+<div id="outline-container-org8bc7010" class="outline-2">
+<h2 id="org8bc7010">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org8bc7010">
 </div>
-<div id="outline-container-orgdc23d88" class="outline-3">
-<h3 id="orgdc23d88">요소 얻기</h3>
-<div class="outline-text-3" id="text-orgdc23d88">
+<div id="outline-container-org14cb508" class="outline-3">
+<h3 id="org14cb508">요소 얻기</h3>
+<div class="outline-text-3" id="text-org14cb508">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -264,9 +256,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org453dc15" class="outline-3">
-<h3 id="org453dc15">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-org453dc15">
+<div id="outline-container-orgc235a97" class="outline-3">
+<h3 id="orgc235a97">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-orgc235a97">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -276,9 +268,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-org1f70b2c" class="outline-3">
-<h3 id="org1f70b2c">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-org1f70b2c">
+<div id="outline-container-orga67e25b" class="outline-3">
+<h3 id="orga67e25b">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-orga67e25b">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -298,9 +290,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orga23b55a" class="outline-3">
-<h3 id="orga23b55a">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-orga23b55a">
+<div id="outline-container-org7871f2f" class="outline-3">
+<h3 id="org7871f2f">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-org7871f2f">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -327,9 +319,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 </div>
-<div id="outline-container-orgbe23ed3" class="outline-2">
-<h2 id="orgbe23ed3">외부 링크</h2>
-<div class="outline-text-2" id="text-orgbe23ed3">
+<div id="outline-container-orgea8fb91" class="outline-2">
+<h2 id="orgea8fb91">외부 링크</h2>
+<div class="outline-text-2" id="text-orgea8fb91">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
@@ -368,5 +360,14 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
