--- a/note/magit.html
+++ b/note/magit.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,16 +68,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb981d25">magit-status</a></li>
-<li><a href="#orgf20a8b1">Stage</a></li>
-<li><a href="#org02e044a">Commit</a></li>
-<li><a href="#orgaaca857">Log</a></li>
-<li><a href="#org14e6e61">Push</a></li>
-<li><a href="#org27b03ac">Pull</a></li>
-<li><a href="#orgddfc2f4">Branch</a></li>
-<li><a href="#orgac8ddb6">Reset or Revert</a></li>
-<li><a href="#org5ffba2d">기타</a></li>
-<li><a href="#orge852c0d">외부 링크</a></li>
+<li><a href="#orgc600815">magit-status</a></li>
+<li><a href="#orge0d310f">Stage</a></li>
+<li><a href="#org1acc3ab">Commit</a></li>
+<li><a href="#orgac4a2dd">Log</a></li>
+<li><a href="#org901bbdc">Push</a></li>
+<li><a href="#org23cc0a9">Pull</a></li>
+<li><a href="#orge703d3a">Branch</a></li>
+<li><a href="#org5034199">Reset or Revert</a></li>
+<li><a href="#org75d0bcf">기타</a></li>
+<li><a href="#orge154741">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -106,9 +98,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-orgb981d25" class="outline-2">
-<h2 id="orgb981d25">magit-status</h2>
-<div class="outline-text-2" id="text-orgb981d25">
+<div id="outline-container-orgc600815" class="outline-2">
+<h2 id="orgc600815">magit-status</h2>
+<div class="outline-text-2" id="text-orgc600815">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -130,9 +122,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgf20a8b1" class="outline-2">
-<h2 id="orgf20a8b1">Stage</h2>
-<div class="outline-text-2" id="text-orgf20a8b1">
+<div id="outline-container-orge0d310f" class="outline-2">
+<h2 id="orge0d310f">Stage</h2>
+<div class="outline-text-2" id="text-orge0d310f">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -145,9 +137,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org02e044a" class="outline-2">
-<h2 id="org02e044a">Commit</h2>
-<div class="outline-text-2" id="text-org02e044a">
+<div id="outline-container-org1acc3ab" class="outline-2">
+<h2 id="org1acc3ab">Commit</h2>
+<div class="outline-text-2" id="text-org1acc3ab">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -163,9 +155,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgaaca857" class="outline-2">
-<h2 id="orgaaca857">Log</h2>
-<div class="outline-text-2" id="text-orgaaca857">
+<div id="outline-container-orgac4a2dd" class="outline-2">
+<h2 id="orgac4a2dd">Log</h2>
+<div class="outline-text-2" id="text-orgac4a2dd">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -175,25 +167,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org14e6e61" class="outline-2">
-<h2 id="org14e6e61">Push</h2>
-<div class="outline-text-2" id="text-org14e6e61">
+<div id="outline-container-org901bbdc" class="outline-2">
+<h2 id="org901bbdc">Push</h2>
+<div class="outline-text-2" id="text-org901bbdc">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org27b03ac" class="outline-2">
-<h2 id="org27b03ac">Pull</h2>
-<div class="outline-text-2" id="text-org27b03ac">
+<div id="outline-container-org23cc0a9" class="outline-2">
+<h2 id="org23cc0a9">Pull</h2>
+<div class="outline-text-2" id="text-org23cc0a9">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgddfc2f4" class="outline-2">
-<h2 id="orgddfc2f4">Branch</h2>
-<div class="outline-text-2" id="text-orgddfc2f4">
+<div id="outline-container-orge703d3a" class="outline-2">
+<h2 id="orge703d3a">Branch</h2>
+<div class="outline-text-2" id="text-orge703d3a">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -201,26 +193,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-orgac8ddb6" class="outline-2">
-<h2 id="orgac8ddb6">Reset or Revert</h2>
-<div class="outline-text-2" id="text-orgac8ddb6">
+<div id="outline-container-org5034199" class="outline-2">
+<h2 id="org5034199">Reset or Revert</h2>
+<div class="outline-text-2" id="text-org5034199">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5ffba2d" class="outline-2">
-<h2 id="org5ffba2d">기타</h2>
-<div class="outline-text-2" id="text-org5ffba2d">
+<div id="outline-container-org75d0bcf" class="outline-2">
+<h2 id="org75d0bcf">기타</h2>
+<div class="outline-text-2" id="text-org75d0bcf">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orge852c0d" class="outline-2">
-<h2 id="orge852c0d">외부 링크</h2>
-<div class="outline-text-2" id="text-orge852c0d">
+<div id="outline-container-orge154741" class="outline-2">
+<h2 id="orge154741">외부 링크</h2>
+<div class="outline-text-2" id="text-orge154741">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
@@ -259,5 +251,14 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
