--- a/note/motion.html
+++ b/note/motion.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,15 +68,15 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbeb45fd">단축키</a></li>
-<li><a href="#orgdfaee2b">팁</a>
+<li><a href="#org0714a04">단축키</a></li>
+<li><a href="#org5fe4ddd">팁</a>
 <ul>
-<li><a href="#org7d57cd8">효과 적용 시간 보장하기</a></li>
+<li><a href="#orgd987f2a">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#orgb46d92b">기타</a>
+<li><a href="#org7f3b72d">기타</a>
 <ul>
-<li><a href="#org16ab20e">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#orge8e0c40">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -100,9 +92,9 @@ gtag('config', 'UA-44534026-1');
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-orgbeb45fd" class="outline-2">
-<h2 id="orgbeb45fd">단축키</h2>
-<div class="outline-text-2" id="text-orgbeb45fd">
+<div id="outline-container-org0714a04" class="outline-2">
+<h2 id="org0714a04">단축키</h2>
+<div class="outline-text-2" id="text-org0714a04">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -110,13 +102,13 @@ gtag('config', 'UA-44534026-1');
 </dl>
 </div>
 </div>
-<div id="outline-container-orgdfaee2b" class="outline-2">
-<h2 id="orgdfaee2b">팁</h2>
-<div class="outline-text-2" id="text-orgdfaee2b">
+<div id="outline-container-org5fe4ddd" class="outline-2">
+<h2 id="org5fe4ddd">팁</h2>
+<div class="outline-text-2" id="text-org5fe4ddd">
 </div>
-<div id="outline-container-org7d57cd8" class="outline-3">
-<h3 id="org7d57cd8">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-org7d57cd8">
+<div id="outline-container-orgd987f2a" class="outline-3">
+<h3 id="orgd987f2a">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-orgd987f2a">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -134,13 +126,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orgb46d92b" class="outline-2">
-<h2 id="orgb46d92b">기타</h2>
-<div class="outline-text-2" id="text-orgb46d92b">
+<div id="outline-container-org7f3b72d" class="outline-2">
+<h2 id="org7f3b72d">기타</h2>
+<div class="outline-text-2" id="text-org7f3b72d">
 </div>
-<div id="outline-container-org16ab20e" class="outline-3">
-<h3 id="org16ab20e">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-org16ab20e">
+<div id="outline-container-orge8e0c40" class="outline-3">
+<h3 id="orge8e0c40">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-orge8e0c40">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -192,5 +184,14 @@ gtag('config', 'UA-44534026-1');
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
