--- a/note/seorenn.html
+++ b/note/seorenn.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -100,9 +92,9 @@ Java와 C++은 아주 혐오하는 것 같다.
 기타 고전 건축이나 기둥에 흥분하는 변태 같다.
 </p>
 
-<div id="outline-container-org29cc189" class="outline-2">
-<h2 id="org29cc189">외부 링크</h2>
-<div class="outline-text-2" id="text-org29cc189">
+<div id="outline-container-org9db77c1" class="outline-2">
+<h2 id="org9db77c1">외부 링크</h2>
+<div class="outline-text-2" id="text-org9db77c1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
 <li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
@@ -146,5 +138,14 @@ Java와 C++은 아주 혐오하는 것 같다.
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
