--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -169,9 +161,9 @@ gtag('config', 'UA-44534026-1');
 </tbody>
 </table>
 
-<div id="outline-container-orgd7c3397" class="outline-2">
-<h2 id="orgd7c3397">참고</h2>
-<div class="outline-text-2" id="text-orgd7c3397">
+<div id="outline-container-orge00c05c" class="outline-2">
+<h2 id="orge00c05c">참고</h2>
+<div class="outline-text-2" id="text-orge00c05c">
 <ul class="org-ul">
 <li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
@@ -210,5 +202,14 @@ gtag('config', 'UA-44534026-1');
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
