--- a/note/tmux.html
+++ b/note/tmux.html
@@ -28,14 +28,6 @@
 <meta name="robots" content="follow,index" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'UA-44534026-1');
-</script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content-container">
@@ -76,20 +68,20 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org19c441d">사용법</a></li>
-<li><a href="#org451ea69">설정 방법</a>
+<li><a href="#orgafc0bfd">사용법</a></li>
+<li><a href="#org8ee2965">설정 방법</a>
 <ul>
-<li><a href="#org342e927">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#org58725f4">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#orgd653251">단축키</a></li>
-<li><a href="#orgeedf631">기타 팁</a>
+<li><a href="#org28aee58">단축키</a></li>
+<li><a href="#org05dd190">기타 팁</a>
 <ul>
-<li><a href="#orgac079f0">선택 영역 복사하기</a></li>
-<li><a href="#orgdaacb6a">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#org27af876">선택 영역 복사하기</a></li>
+<li><a href="#org1b1f24e">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#orgd47b190">관련된 글들</a></li>
+<li><a href="#org9cec937">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -103,9 +95,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-org19c441d" class="outline-2">
-<h2 id="org19c441d">사용법</h2>
-<div class="outline-text-2" id="text-org19c441d">
+<div id="outline-container-orgafc0bfd" class="outline-2">
+<h2 id="orgafc0bfd">사용법</h2>
+<div class="outline-text-2" id="text-orgafc0bfd">
 <p>
 그냥 실행시키면 실행은 된다.
 </p>
@@ -131,16 +123,16 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 </div>
 </div>
 </div>
-<div id="outline-container-org451ea69" class="outline-2">
-<h2 id="org451ea69">설정 방법</h2>
-<div class="outline-text-2" id="text-org451ea69">
+<div id="outline-container-org8ee2965" class="outline-2">
+<h2 id="org8ee2965">설정 방법</h2>
+<div class="outline-text-2" id="text-org8ee2965">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-org342e927" class="outline-3">
-<h3 id="org342e927">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-org342e927">
+<div id="outline-container-org58725f4" class="outline-3">
+<h3 id="org58725f4">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-org58725f4">
 <p>
 기본 리더키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -170,9 +162,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-orgd653251" class="outline-2">
-<h2 id="orgd653251">단축키</h2>
-<div class="outline-text-2" id="text-orgd653251">
+<div id="outline-container-org28aee58" class="outline-2">
+<h2 id="org28aee58">단축키</h2>
+<div class="outline-text-2" id="text-org28aee58">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -195,13 +187,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-orgeedf631" class="outline-2">
-<h2 id="orgeedf631">기타 팁</h2>
-<div class="outline-text-2" id="text-orgeedf631">
+<div id="outline-container-org05dd190" class="outline-2">
+<h2 id="org05dd190">기타 팁</h2>
+<div class="outline-text-2" id="text-org05dd190">
 </div>
-<div id="outline-container-orgac079f0" class="outline-3">
-<h3 id="orgac079f0">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-orgac079f0">
+<div id="outline-container-org27af876" class="outline-3">
+<h3 id="org27af876">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-org27af876">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -215,9 +207,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-orgdaacb6a" class="outline-3">
-<h3 id="orgdaacb6a">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-orgdaacb6a">
+<div id="outline-container-org1b1f24e" class="outline-3">
+<h3 id="org1b1f24e">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-org1b1f24e">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -245,9 +237,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-orgd47b190" class="outline-2">
-<h2 id="orgd47b190">관련된 글들</h2>
-<div class="outline-text-2" id="text-orgd47b190">
+<div id="outline-container-org9cec937" class="outline-2">
+<h2 id="org9cec937">관련된 글들</h2>
+<div class="outline-text-2" id="text-org9cec937">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🌏🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -297,5 +289,14 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
 </footer>
 </div><div class="side-ad-container"></div>
-</div></body>
+</div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</body>
 </html>
